<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/fragment_dashboard"
        android:icon="@drawable/ic_vector_dashboard"
        android:title="@string/dashboard"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/fragment_products"
        android:icon="@drawable/ic_vector_products"
        android:title="@string/products"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/fragment_orders"
        android:icon="@drawable/ic_vector_orders"
        android:title="@string/orders"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/fragment_sold_products"
        android:icon="@drawable/ic_vector_sold_products"
        android:title="@string/sold_products"
        app:showAsAction="ifRoom" />



</menu>