<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_150dp"
        android:layout_marginTop="@dimen/_8dp"
        android:src="@drawable/ic_profile"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.mycart.utils.customviews.EditTextWithTextView
        android:id="@+id/et_tv_profile_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        app:headerText="@string/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <com.example.mycart.utils.customviews.EditTextWithTextView
        android:id="@+id/et_tv_profile_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        app:headerText="@string/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_tv_profile_first_name" />

    <com.example.mycart.utils.customviews.EditTextWithTextView
        android:id="@+id/et_tv_profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        app:headerText="@string/hint_email_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_tv_profile_last_name" />

    <com.example.mycart.utils.customviews.EditTextWithTextView
        android:id="@+id/et_tv_profile_mobile_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        app:headerText="@string/mobile_number"
        app:editTextHint="@string/mobile_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_tv_profile_email" />


    <com.example.mycart.utils.customviews.MyCartTextViewBold
        android:id="@+id/tv_gender_male"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_4dp"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@drawable/bg_gender_pressed"
        android:gravity="center"
        android:padding="@dimen/_8dp"
        android:text="@string/male"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toStartOf="@id/tv_gender_female"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_tv_profile_mobile_no" />

    <com.example.mycart.utils.customviews.MyCartTextViewBold
        android:id="@+id/tv_gender_female"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginTop="@dimen/_8dp"
        android:padding="@dimen/_8dp"
        android:textSize="@dimen/_18sp"
        android:gravity="center"
        android:textColor="@color/grey_gender_color"
        android:background="@drawable/bg_gender_not_pressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_gender_male"
        app:layout_constraintTop_toBottomOf="@+id/et_tv_profile_mobile_no" />

    <com.example.mycart.utils.customviews.MyCartButton
        android:id="@+id/btn_update_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12dp"
        android:layout_marginEnd="@dimen/_12dp"
        android:layout_marginTop="@dimen/_8dp"
        android:layout_marginBottom="@dimen/_8dp"
        android:text="@string/update_profile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender_male" />
</androidx.constraintlayout.widget.ConstraintLayout>