<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".views.fragments.AddProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_product_image"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_300dp"
            android:layout_margin="@dimen/_8dp"
            android:elevation="@dimen/_0dp"
            app:cardCornerRadius="@dimen/_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_product_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/profile_pic_description"
                    android:scaleType="fitXY"
                    tools:srcCompat="@tools:sample/avatars" />


                <ImageView
                    android:id="@+id/iv_add_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15dp"
                    android:layout_marginBottom="@dimen/_15dp"
                    android:background="@color/grey"
                    android:contentDescription="@string/profile_pic_description"
                    android:padding="@dimen/_2dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_add_photo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <com.example.mycart.utils.customviews.EditTextWithTextView
            android:id="@+id/et_tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            app:editTextHint="@string/product_name"
            app:headerText="@string/product_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_product_image" />

        <com.example.mycart.utils.customviews.EditTextWithTextView
            android:id="@+id/et_tv_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            app:editTextHint="@string/product_price"
            app:headerText="@string/product_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_tv_product_name" />

        <com.example.mycart.utils.customviews.EditTextWithTextView
            android:id="@+id/et_tv_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            app:editTextHint="@string/product_description"
            app:headerText="@string/product_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_tv_product_price" />

        <com.example.mycart.utils.customviews.EditTextWithTextView
            android:id="@+id/et_tv_product_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            app:editTextHint="@string/product_quantity"
            app:headerText="@string/product_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_tv_product_description" />


        <com.example.mycart.utils.customviews.MyCartButton
            android:id="@+id/btn_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginBottom="@dimen/_8dp"
            android:text="@string/add_product"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_tv_product_quantity" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>